# isel-leic-cd-g15

./: README.md  TODO
docs/CD_TestFiles/: a.txt
src/ex01/c/: count_ones.c  count_symbol.c  print_bits.c
src/ex01/python/: arithmetic_sequence.py  fibonacci.py  most_frequent_symbol.py
src/ex02/: generate_password.py  strings_font  strings_font.py
src/ex03/: .gitignore  CMakeLists.txt  DUMMY_FILE.txt  output  test.txt
src/ex03/decoded_test_files/: Person.java  a.txt  alice29.txt
src/ex03/encoded_test_files/: New Text Document.txt.unary  Person.java.unary  a.txt.unary  alice29.txt.unary  bets.txt.unary  citizens.txt.unary  cp.htm.unary  lena.bmp.unary  progc.c.unary  z.txt.unary
src/ex03/include/: InputBitFileStream.h  OutputBitFileStream.h  file_tree_foreach.h  unary_common.h  unary_decode.h  unary_encode.h  utils.h
src/ex03/include/streams/: InputBitFileStream.h  OutputBitFileStream.h
src/ex03/include/unary/: unary_common.h  unary_decode.h  unary_encode.h
src/ex03/src/: InputFileStream.c  OutputBitFileStream.c  file_tree_foreach.c  main.c  unary_common.c  unary_decode.c  unary_encode.c  utils.c
src/ex03/src/streams/: OutputBitFileStream.c
src/ex03/src/unary/: unary_common.c  unary_decode.c
src/ex03/test_files/: bets.txt  cp.htm  z.txt
src/ex04/: LZ77_Tokenizer.py  a_encoded.txt  alice29_encoded.txt
src/phase01/ex03/: CMakeLists.txt  test.txt
src/phase01/ex03/decoded_test_files/: citizens.txt
src/phase01/ex03/encoded_test_files/: Person.java.unary  a.txt.unary  alice29.txt.unary  bets.txt.unary  citizens.txt.unary  cp.htm.unary  lena.bmp.unary  progc.c.unary  z.txt.unary
src/phase01/ex03/include/: utils.h
src/phase01/ex03/include/streams/: InputBitFileStream.h
src/phase01/ex03/src/: file_tree_foreach.c  main.c  utils.c
src/phase01/ex03/src/streams/: InputFileStream.c
src/phase01/ex03/src/unary/: unary_common.c  unary_encode.c
src/phase01/ex03/test_files/: progc.c
src/phase02/: utils.py
src/utils/: utils.py
(+122 files in other folders)
